--- a/roles/keycloak/templates/13.0.0/standalone-ha.xml.j2
+++ b/roles/keycloak/templates/13.0.0/standalone-ha.xml.j2
@@ -442,12 +442,12 @@
                 <local-cache name="users">
                     <heap-memory size="10000"/>
                 </local-cache>
-                <distributed-cache name="sessions" owners="2"/>
-                <distributed-cache name="authenticationSessions" owners="2"/>
-                <distributed-cache name="offlineSessions" owners="2"/>
-                <distributed-cache name="clientSessions" owners="2"/>
-                <distributed-cache name="offlineClientSessions" owners="2"/>
-                <distributed-cache name="loginFailures" owners="2"/>
+                <{{session.cachetype}} name="sessions" {% if session.cachetype == "distributed-cache" %} owners="{{session.owners}}" {% endif %} />
+                <{{session.cachetype}} name="authenticationSessions" {% if session.cachetype == "distributed-cache" %} owners="{{session.owners}}" {% endif %} />
+                <{{session.cachetype}} name="offlineSessions" {% if session.cachetype == "distributed-cache" %} owners="{{session.owners}}" {% endif %} />
+                <{{session.cachetype}} name="clientSessions" {% if session.cachetype == "distributed-cache" %} owners="{{session.owners}}" {% endif %} />
+                <{{session.cachetype}} name="offlineClientSessions" {% if session.cachetype == "distributed-cache" %} owners="{{session.owners}}" {% endif %} />
+                <{{session.cachetype}} name="loginFailures" {% if session.cachetype == "distributed-cache" %} owners="{{session.owners}}" {% endif %} />
                 <local-cache name="authorization">
                     <heap-memory size="10000"/>
                 </local-cache>
